Sync frontend/backend sample users, add integration tests, and clean git tracking